--- a/public/hosted-ai-presentation.html
+++ b/public/hosted-ai-presentation.html
@@ -1142,7 +1142,7 @@ fn run_cycle(&self, fragments: Vec<FragmentInput>, hygiene_threshold: f32) -> Ha
                         <ul>
                             <li>✓ 10,000+ production requests</li>
                             <li>✓ Cost analysis: 30%+ savings vs cloud</li>
-                            <li>✓ 5+ enterprise customers using hosted.ai</li>
+                            <li>✓ First 5 enterprise customers onboarded via partnership</li>
                             <li>✓ Co-marketing materials drafted</li>
                         </ul>
                     </div>
@@ -1241,7 +1241,7 @@ fn run_cycle(&self, fragments: Vec<FragmentInput>, hygiene_threshold: f32) -> Ha
                     <div class="card-title">For hosted.ai</div>
                     <div class="card-description">
                         <ul>
-                            <li><strong>Immediate Customer Access:</strong> Harpoon's enterprise customers need GPU capacity</li>
+                            <li><strong>Ready for Enterprise Deployment:</strong> Production infrastructure ready to onboard customers needing GPU capacity</li>
                             <li><strong>Intelligent Workload Distribution:</strong> Covenant routing optimizes GPU utilization</li>
                             <li><strong>Developer-Friendly:</strong> Clean API abstraction increases adoption</li>
                             <li><strong>Production Validation:</strong> Real-world usage data for platform improvement</li>
@@ -1364,7 +1364,7 @@ fn run_cycle(&self, fragments: Vec<FragmentInput>, hygiene_threshold: f32) -> Ha
                 </div>
                 <div class="metric">
                     <div class="metric-value">✓</div>
-                    <div class="metric-label">Enterprise Customers</div>
+                    <div class="metric-label">Ready to Deploy</div>
                 </div>
                 <div class="metric">
                     <div class="metric-value">✓</div>
